new: added maven plugins